test/variables/diten/loopIndexConst.good
loopIndexConst.chpl:6: error: illegal lvalue in assignment
loopIndexConst.chpl:11: error: illegal lvalue in assignment
